<resources>
    <string name="app_name">Android Development</string>

    <!-- Strings for Main Activity -->
    <string name="button_classwork">Recent Classwork</string>
    <string name="button_homework1">Homework 1</string>
    <string name="button_homework2">Homework 2</string>
    <string name="button_homework3">Homework 3</string>
    <string name="button_homework4">Homework 4</string>
    <string name="button_homework5">Homework 5</string>
    <string name="button_homework6">Homework 6</string>
    <string name="button_homework7">Homework 7 (UC)</string>

    <!-- Strings for Homework 1 -->
    <string name="button_change">Change text</string>
    <string name="text_up">I wanna be up</string>
    <string name="text_down">I wanna be down</string>

    <!-- Strings for Classwork 2 -->
    <string name="edit_text_name">Name</string>
    <string name="edit_text_password">Password</string>
    <string name="button_login">Login</string>

    <!-- Strings for Homework 2 -->
    <string name="label_austria">Austria</string>
    <string name="label_poland">Poland</string>
    <string name="label_italy">Italy</string>
    <string name="label_columbia">Columbia</string>
    <string name="label_madagascar">Madagascar</string>
    <string name="label_thailand">Thailand</string>
    <string name="label_denmark">Denmark</string>

    <!-- Strings for Classwork 3 -->
    <string name="text_classwork3_label">New banknote</string>
    <string name="button_classwork3_click">Click me</string>

    <!-- Strings for Homework 3 -->
    <string name="button_homework3_load">Load image</string>
    <string name="button_homework3_hide">Hide image</string>

    <!-- Strings for Homework 4 -->
    <string name="button_homework4_start_new_activity">Sova Animation</string>

    <!-- Strings for Classwork 5 -->
    <string name="button_classwork5">Get Random Number</string>

    <!-- Strings for Homework 5 -->
    <string name="text_homework5_off">Wifi OFF</string>
    <string name="text_homework5_on">Wifi ON</string>

    <!-- Strings for Homework 6 -->


</resources>
