<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/text_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/color_text_up"/>

    <Button
        android:id="@+id/button_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_change"/>

    <TextView
        android:id="@+id/text_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_down"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/color_text_down"/>

</LinearLayout>
